# tg-analyzer

./: .gitignore  LICENSE  Pipfile  README.md  TODO.md  dev-requirements.txt  dodo.py  pyproject.toml  requirements.txt
API/creator/: ;q  __init__.py  __main__.py
doc/src/: conf.py  core.rst  gui.rst  html_export.rst  index.rst
misc/: loading_window_proto.py  loading_window_text.txt  primary_analysis.ipynb
test/: TODO.md
tests_tganalyzer/: core_test.py  data.json  index.html
tests_tganalyzer/index_html_files/: style.css
tganalyzer/: __main__.py
tganalyzer/cmd/: __init__.py
tganalyzer/core/: .creator.py.swp  __init__.py  analyzer.py  creator.py
tganalyzer/gui/: TODO.md  __init__.py  __main__.py  l10n.sh
tganalyzer/gui/po/ru_RU.UTF-8/LC_MESSAGES/: gui.po
tganalyzer/html_export/: __init__.py
tganalyzer/html_export/po/ru_RU.UTF-8/LC_MESSAGES/: html_export.po
tganalyzer/html_export/static/: dark.css  light.css
tganalyzer/html_export/templates/: index.html.jinja2
tganalyzer/html_export/themes/: dark.css  light.css
tganalyzer/po/ru_RU.UTF-8/LC_MESSAGES/: gui.po  html_export.po
