[project]
name = "tganalyzer"
description = "Telegram Stats Analyzer"
version = "0.0.0"
requires-python = ">=3.10"
dependencies = ["pyqt5", "jinja2", "matplotlib", "pytz"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
tganalyzer = "tganalyzer"

[tool.setuptools.package-data]
tganalyzer = [
    "*/po/*/*/*.mo",
    "html_export/templates/*",
    "html_export/themes/*",
]
