[tool.poetry]
name = "tganalyzer"
version = "0.0.1"
description = "Statistics analyzer for Telegram"
authors = [
    "Dmitry Astrakhantsev <dmitry.astrakhantsev@gmail.com>",
    "Artem Goroshko <nikto8748@gmail.com>",
    "Valery Zabrovsky <valthebrewer@yandex.ru>",
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
PySide6 = "^6.7.2"
Jinja2 = "^3.1.4"
matplotlib = "^3.9.1"
pytz = "^2024.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.0"
pydocstyle = "^6.3.0"
sphinx = "^7.3.7"
babel = "^2.15.0"
doit = "^0.36.0"
coverage = "^7.5.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
